# mini-search-engine

./: Cargo.toml  README.md
examples/: search_index.json  usage.rs
examples/sample_docs/: doc1.txt  doc2.txt  doc3.txt
src/: lib.rs  main.rs
src/api/: cli.rs  http.rs  mod.rs
src/core/: document.rs  index.rs  mod.rs  ranking.rs  tokenizer.rs
src/crawler/: file_crawler.rs  mod.rs  web_crawler.rs
src/search/: engine.rs
src/storage/: json_storage.rs  mod.rs  sled_storage.rs
src/web/: mod.rs  template.rs
