[package]
name = "mini-search-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34"
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
regex = "1.5"
walkdir = "2.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.10"
stopwords = "0.1.1"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.17"
url = "2.4"
robots_txt = "0.7"
tokio-stream = "0.1"
futures = "0.3"
bincode = "1.3"


[dev-dependencies]
tempfile = "3.3"

[[bin]]
name = "search-cli"
path = "src/main.rs"
